Used Gatherers.mapConcurrent in runSearch